Added: - Ubuntu 18.04 workaround - using cat to write to files instead of echo